--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "cuid": "^2.1.8",
     "date-fns": "^2.14.0",
+    "firebase": "^9.2.0",
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
@@ -15,7 +16,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.0",
     "react-toastify": "^6.0.6",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
